--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full JS Calendar</title>
+    <link rel="icon" type="image/ico" href="./images/1024.jpg" sizes="1024x1024">
+    <link rel="apple-touch-icon" href="./images/1024.jpg" sizes="1024x1024">
+    <link rel="shortcut icon" type="image/png" href="./images/1024.jpg"/>
     <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 <body>
