--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <script>
         // define calendar root 
-        const base = document.querySelector('calendar-root');
+        const root = document.querySelector('calendar-root');
         // initialization
-        const cal = new Calendar(base, {
+        const cal = new Calendar(root, {
             // required data, json format, accept empty arrays
             // data: [],
             // demo data \\
