--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         // define calendar root 
         const root = document.querySelector('calendar-root');
         // initialization
-        const cal = new Calendar(root, {
+        const calendar = new Calendar(root, {
             // required data, json format, accept empty arrays
             // data: [],
             // demo data \\
